--- a/static/index.css
+++ b/static/index.css
@@ -1,91 +1,250 @@
-.login {
-  background-color: #ffa500;
-  padding: 0.5rem;
-}
-.container {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
   margin: 0;
   padding: 0;
-  max-width: 100%;
-  box-shadow: 0 8px 8px #888888;
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
+  transition: all 0.3s ease;
 }
-
-.nav-m {
-  background-color: #fff !important;
+body{
+  height: 100vh;;
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  background-image: linear-gradient( 135deg, #dd494e  10%, #f00606 100%);
 }
-
-.nav {
-  padding-left: 2rem !important;
-  padding-right: 2rem !important;
+::selection{
+  color: #f2f2f2;
+  background: #e63636;
 }
-.navbar-brand {
-  width: 80px;
-  height: 80px;
-}
-
-.navbar-logo {
+body::before,
+body::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
   height: 100%;
   width: 100%;
 }
-main {
-  height: 500px;
+body::before{
+  clip-path: circle(30% at left 20%);
+  opacity: 0.4;
+  background-image: linear-gradient( 135deg, #f64141 10%, #ff6262 100%);
 }
-
-.landingMain {
-  width: 100%;
-  min-height: 100vh;
-  background-image: url("bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  overflow-x: hidden;
+body::after{
+  opacity: 0.4;
+  clip-path: circle(25% at right 80%);
+  background-image: linear-gradient( 135deg, #f64141 10%, #ff6262 100%);
 }
-
-.heading {
-  margin-top: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.cta {
-  transition: all 0.5s;
-}
-.cta span {
-  cursor: pointer;
-  display: inline-block;
+header{
+  height: 85vh;
+  width: 90%;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 12;
+  border-radius: 25px;
+  margin: auto;
   position: relative;
-  transition: 0.5s;
 }
-.cta span:after {
-  content: "\00bb";
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-.cta:hover span {
-  padding-right: 25px;
-}
-.cta:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-.feature-cards {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-  margin-left: 3rem;
-  margin-right: 3rem;
-  height: 300px;
+header .navbar{
+  margin: auto;
+  width: 100%;
+  padding: 35px 50px;
+  border-radius: 25px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  flex-direction: row;
 }
-.card {
-  margin-right: 3rem;
+.navbar .menu{
+  display: flex;
+  flex-wrap: wrap;
+}
+.navbar .logo a{
+  text-decoration: none;
+  font-size: 40px;
+  color: #000;
+  font-weight: 700;
+}
+.navbar .menu li{
+  list-style: none;
+  margin: 0 6px;
+}
+.navbar .menu a{
+  color: #000;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: 500;
+  transition: all 0.3s ease;
+}
+.navbar .menu a:hover{
+  color: #f2f2f2;
+}
+.navbar .buttons input{
+  outline: none;
+  color: #f2f2f2;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 12px;
+  padding: 6px 15px;
+  border: none;
+  margin: 0 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-image: linear-gradient( 135deg, #ff666b  10%, #f64141 100%);
+}
+.text-content .buttons input{
+  outline: none;
+  color: #f2f2f2;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 12px;
+  padding: 6px 15px;
+  border: none;
+  margin: 0 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-image: linear-gradient( 135deg, #942125  10%, #ec3333 100%);
+}
+.navbar .buttons input:hover{
+  transform: scale(0.97);
+}
+ header .text-content{
+   width: 40%;
+   margin: 100px 0 0 50px ;
+ }
+.text-content h2{
+  font-size: 27px;
+  font-weight: 600;
+}
+.text-content p{
+  font-size: 15px;
+  margin-top: 10px;
+}
+header .play-button{
+  position: absolute;
+  right: 50px;
+  bottom: 40px;
+}
+.play-button .play{
+  font-size: 18px;
+  font-weight: 500;
+}
+ .play-button .play::before{
+   content: '';
+   position: absolute;
+   height: 3px;
+   width: 50px;
+   top: 50%;
+   transform: translateY(-50%);
+   left: -58px;
+   background: #000;
+ }
+.play-button i{
+  height: 40px;
+  width: 40px;
+  border: 2px solid #000;
+  line-height: 38px;
+  text-align: center;
+  margin-left: 10px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+@media (max-width:850px) {
+  header .navbar{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 5px;
+  }
+  .navbar .menu {
+    margin: 10px 0 20px 0;
+  }
+  header .text-content{
+    margin: 30px 0 0 20px ;
+    width: 70%;
+  }
+  header .text-content h2{
+    font-size: 20px;
+  }
+}
+@media (max-width:410px) {
+  header{
+    height: 100vh;
+    width: 100%;
+    border-radius: 0px;
+  }
+  header .navbar{
+    padding: 15px 10px;
+}
+}
 
-  background-color: white;
+/* Slider */
+
+.slider-container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+.slider-container .slick {
+  position: relative;
+  width: calc(100% - 60px);
+  margin: 0 auto;
+  background-color: #2b2b2b;
+  border-radius: 10px;
+  padding: 20px 30px;
+}
+.slider-container .slick .slide {
+  border: none;
+  color: rgba(255, 255, 255, 0.75);
+}
+.slider-container .slick .slide:focus {
+  outline: none;
+}
+.slider-container .slick .slide p {
+  display: block;
+}
+.slider-container .slick .slick-arrow {
+  transform: rotate(90deg);
+  top: initial;
+  right: initial;
+  left: -30px;
+  bottom: 0;
+  z-index: 1;
+}
+.slider-container .slick .slick-arrow.slick-prev {
+  bottom: 30px;
+}
+.slider-container .slick .slick-arrow.slick-prev:before {
+  transform: rotate(135deg);
+}
+.slider-container .slick .slick-arrow.slick-next:before {
+  transform: rotate(-45deg);
+}
+.slider-container .slick .slick-arrow:before {
+  transition: opacity 0.25s;
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+}
+.slider-container .slick .slick-dots {
+  position: absolute;
+  width: 30px;
+  left: -30px;
+  top: 0;
+}
+.slider-container .slick .slick-dots li {
+  margin: 0 auto;
+  width: 30px;
+  display: block;
+}
+.slider-container .slick .slick-dots li button {
+  padding: 0;
+}
+.slider-container .slick .slick-dots li button:before {
+  transition: opacity 0.25s;
+  color: white;
 }
