--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,8 @@
     </div> -->
   </header>
 
-  <script src='/static/slider.js'></script>  
+  <script>
+    $('.carousel').carousel();
+  </script>  
 </body>
 </html>
