--- a/templates/udemy.html
+++ b/templates/udemy.html
@@ -19,7 +19,7 @@
           href="{{ url_for('static', filename='index.css') }}"
         />
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -62,7 +62,9 @@
   </header>
 
 
-  <script src='/static/slider.js'></script>  
+  <script>
+    $('.carousel').carousel();
+  </script> 
 
 
 </body>
