--- a/templates/udemy.html
+++ b/templates/udemy.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
 <html lang="en" dir="ltr">
-    
   <head>
     <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -23,6 +22,27 @@
     
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <style>
+        header{
+          height:8rem;
+          position: relative;
+          margin-top: 5rem;
+          margin-bottom: 20%;
+        }
+        header .course{
+            margin-left:5%;
+            margin-right: 5%;
+            padding-bottom: 2rem;
+        }
+        header .desc{
+            margin-left: 5%;
+            margin-right: 5%;
+            padding-bottom: 2rem;
+        }
+        body{
+            height: 230vh;
+        }
+     </style>
    </head>
 <body>
   <header>
@@ -42,19 +62,50 @@
       </div>
     </nav>
     <!-- <div class="text-content">
-      <h2>How Effective <br>Are Online Courses?</h2>
-      <p>A deep dive into the analytics of the <b>Coursera & Udemy</b> courses in the education industry. Login via <b>Sawo</b> to view your udemy and coursera analytics now! <i>[Coming Soon]</i> </p>
-      <div class="buttons">
-      <form action="/login_page" method="post">
-        <input type="submit" method="LOGIN" value="Udemy Analytics"> <br>
-      </form>
-      <form action="/login_page" method="post">
-        <br> <input type="submit" method="LOGIN" value="Coursera Analytics"> <br>
-
-      </form>
-      </div>
-      
+        <h2>How Effective <br>Are Online Courses?</h2>
+        <p>A deep dive into the analytics of the <b>Coursera & Udemy</b> courses in the education industry. Login via <b>Sawo</b> to view your udemy and coursera analytics now! <i>[Coming Soon]</i> </p>
+        <div class="buttons">
+        <form action="/udemy_analytics">
+          <input type="submit" value="Udemy Analytics"> <br>
+        </form>
+        <form action="/coursera_analytics">
+          <br> <input type="submit" value="Coursera Analytics"> <br>
+        </form>
+        </div>
     </div> -->
+    
+    <br> <br>
+
+    <h2 class="course"><b>Udemy Analytics</b></h2>
+
+    <p class="desc"> 
+
+        
+1. Business Finance courses - 1195 <br>
+2. Graphic Design courses - 603<br>
+3. MI courses - 680<br>
+4. WD courses - 1200<br>
+
+<br>
+
+        <h3 class="course" >Final Conclusive Facts: </h3>
+<p class="desc">
+• Highest <b>number of subscribers</b> in the subject - <b>Business Finance</b> was found to be <b>65576</b> for the course <b>"Bitcoin or How I Learned to Stop Worrying and Love Crypto" </b><br>
+
+• Highest <b>number of subscribers</b> in the subject - <b>Graphic Designer</b> was found to be <b>53851</b>  for the course <b>"Photoshop In-Depth : Master all of Photoshop's Tools Easily" </b><br>
+
+• Highest <b>number of subscribers</b> in the subject - <b>Musical Instruments</b>  was found to be <b>101154</b>  for the course <b>"Free Beginner Electric Guitar Lessons"</b> <br>
+
+• Highest <b>number of subscribers</b> in the subject - <b>Web Development</b> was found to be <b>268923</b>  for the course <b>"Learn HTML5 Programming From Scratch"</b> <br>
+</p>
+         </p>
+         
+
+    <div class='tableauPlaceholder' id='viz1630776733385' style='position: relative; display: block;
+    margin-left: auto;
+    margin-right: auto;'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ud&#47;UdemyMOOCHack-O-Uplift&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='UdemyMOOCHack-O-Uplift&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ud&#47;UdemyMOOCHack-O-Uplift&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1630776733385');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else { vizElement.style.width='100%';vizElement.style.height='3027px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+    
     
     <!-- <div class="play-button">
       <span class="play">Play Video</span>
@@ -62,10 +113,7 @@
     </div> -->
   </header>
 
-
-  
-
+ 
 
 </body>
-
 </html>
