--- a/static/index.css
+++ b/static/index.css
@@ -28,12 +28,12 @@ body::after{
 body::before{
   clip-path: circle(30% at left 20%);
   opacity: 0.4;
-  background-image: linear-gradient( 135deg, #f64141 10%, #ff6262 100%);
+  background-image: linear-gradient( 135deg, #f64141 10%, #ff2c2c 100%);
 }
 body::after{
   opacity: 0.4;
   clip-path: circle(25% at right 80%);
-  background-image: linear-gradient( 135deg, #f64141 10%, #ff6262 100%);
+  background-image: linear-gradient( 135deg, #f64141 10%, #ff2c2c 100%);
 }
 header{
   height: 85vh;
@@ -115,11 +115,17 @@ header .navbar{
    margin: 100px 0 0 50px ;
  }
 .text-content h2{
-  font-size: 27px;
+  font-size: 30px;
   font-weight: 600;
 }
+h2{
+  font-size: 30px;
+}
+p{
+  font-size: 20px;
+}
 .text-content p{
-  font-size: 15px;
+  font-size: 20px;
   margin-top: 10px;
 }
 header .play-button{
@@ -182,42 +188,69 @@ header .play-button{
 
 /* Slider */
 
-.carousel-fade .carousel-inner .item {
-  transition-property: opacity;
+.slider-container {
+  max-width: 500px;
+  margin: 0 auto;
 }
-.carousel-fade .carousel-inner .item,
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-  opacity: 0;
+.slider-container .slick {
+  position: relative;
+  width: calc(100% - 60px);
+  margin: 0 auto;
+  background-color: #2b2b2b;
+  border-radius: 10px;
+  padding: 20px 30px;
 }
-.carousel-fade .carousel-inner .active,
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
-  opacity: 1;
+.slider-container .slick .slide {
+  border: none;
+  color: rgba(255, 255, 255, 0.75);
 }
-.carousel-fade .carousel-inner .next,
-.carousel-fade .carousel-inner .prev,
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-  left: 0;
-  transform: translate3d(0, 0, 0);
+.slider-container .slick .slide:focus {
+  outline: none;
 }
-.carousel-fade .carousel-control {
-  z-index: 2;
+.slider-container .slick .slide p {
+  display: block;
 }
-html,
-body,
-.carousel,
-.carousel-inner,
-.carousel-inner .item {
-  height: 100%;
+.slider-container .slick .slick-arrow {
+  transform: rotate(90deg);
+  top: initial;
+  right: initial;
+  left: -30px;
+  bottom: 0;
+  z-index: 1;
 }
-.item:nth-child(1) {
-  background: #74C390;
+.slider-container .slick .slick-arrow.slick-prev {
+  bottom: 30px;
 }
-.item:nth-child(2) {
-  background: #51BCE8;
+.slider-container .slick .slick-arrow.slick-prev:before {
+  transform: rotate(135deg);
 }
-.item:nth-child(3) {
-  background: #E46653;
+.slider-container .slick .slick-arrow.slick-next:before {
+  transform: rotate(-45deg);
+}
+.slider-container .slick .slick-arrow:before {
+  transition: opacity 0.25s;
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+}
+.slider-container .slick .slick-dots {
+  position: absolute;
+  width: 30px;
+  left: -30px;
+  top: 0;
+}
+.slider-container .slick .slick-dots li {
+  margin: 0 auto;
+  width: 30px;
+  display: block;
+}
+.slider-container .slick .slick-dots li button {
+  padding: 0;
+}
+.slider-container .slick .slick-dots li button:before {
+  transition: opacity 0.25s;
+  color: white;
 }
