--- a/templates/udemy.html
+++ b/templates/udemy.html
@@ -79,13 +79,20 @@
     <h2 class="course"><b>Udemy Analytics</b></h2>
 
     <p class="desc"> 
+        Udemy, Inc. is an American massive open online course (MOOC) provider aimed at professional adults and students. It was founded in May 2010 by Eren Bali, Gagan Biyani, and Oktay Caglar.
 
+        As of April of 2021, the platform has more than 40 million students, 155,000 courses and 70,000 instructors teaching courses in over 65 languages. There have been over 480 million course enrollments. Students and instructors come from 180+ countries and 2/3 of the students are located outside of the U.S.
         
+        Students take courses largely as a means of improving job-related skills. Some courses generate credit toward technical certification. Udemy has made a special effort to attract corporate trainers seeking to create coursework for employees of their company.
+        <br>
+
+        <h3 class="course" >Four Main Courses: </h3>
+<p class="desc"> 
 1. Business Finance courses - 1195 <br>
 2. Graphic Design courses - 603<br>
 3. MI courses - 680<br>
 4. WD courses - 1200<br>
-
+</p>
 <br>
 
         <h3 class="course" >Final Conclusive Facts: </h3>
