--- a/templates/coursera.html
+++ b/templates/coursera.html
@@ -40,8 +40,21 @@
             padding-bottom: 2rem;
         }
         body{
-            height: 200vh;
+            height: 230vh;
         }
+        .text-content .buttons input{
+  outline: none;
+  color: #f2f2f2;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 12px;
+  padding: 6px 15px;
+  border: none;
+  margin: 0 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-image: linear-gradient( 135deg, #942125  10%, #ec3333 100%);
+}
      </style>
    </head>
 <body>
@@ -78,18 +91,52 @@
 
     <h2 class="course"><b>Coursera Analytics</b></h2>
 
-    <p class="desc"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    <p class="desc"> 
+        Coursera Inc. is an American massive open online course provider founded in 2012 by Stanford University computer science professors Andrew Ng and Daphne Koller. Coursera works with universities and other organizations to offer online courses, certifications, and degrees in a variety of subjects. In 2021 it was estimated that about 150 universities offered more 4,000 courses through Coursera.
+        <br>
 
-        Why do we use it?
-        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-        
+        <h3 class="course" >Five Main Courses: </h3>
+            <p class="desc"> 
+            1. Contact Tracing <br>
+            2. Digital Marketing <br>
+            3. Project Management  <br>
+            4. Python Programming <br>
+            5. Social Psychology <br>
+            </p>
+<br>
+
+        <h3 class="course" >Final Conclusive Facts: </h3>
+<p class="desc">
+• Coursera has 150 participating member universities, 3800 courses, 385 specializations, 17 MasterTrack certifications, and 20 undergraduate degrees.<br>
+
+• For its part, in the industrial sector, Coursera has 50 partners, 580 courses, 83 specializations, and 18 professional certifications, not to mention its presence in 2300 companies, 3700 campuses, and 325 government agencies. It has also promoted initiatives in 140 countries to provide learning to tens of thousands of refugees.<br>
+
+• The countries with the most students enrolled in this platform are the United States, followed by India, Mexico, China, and Brazil. There has also been a 444% increase in Coursera course enrollments, making a total of 50 million inscriptions.<br>
+
+• 79% Learners gave their course a 5-star rating, 99% Enrollments are incourses with greater than a 4-star rating.75% First-time learners go on to enroll in another course <br>
+
+• Half of the available courses are for beginners, and very less i.e nearly 2% of the courses are of advance level <br>
+
+</p>
          </p>
          
+         <h3 class="course" ><b>Analytics Dashboard</b></h3>
          <div class='tableauPlaceholder' id='viz1630776708008' style='position: relative; display: block;
          margin-left: auto;
-         margin-right: auto;'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CourseraMOOCHack-O-Uplift&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CourseraMOOCHack-O-Uplift&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CourseraMOOCHack-O-Uplift&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1630776708008');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else { vizElement.style.width='100%';vizElement.style.height='2527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-    <br> <br>
+         margin-right: auto;'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CourseraMOOCHack-O-Uplift&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CourseraMOOCHack-O-Uplift&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CourseraMOOCHack-O-Uplift&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1630776708008');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else { vizElement.style.width='100%';vizElement.style.height='2527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> 
     
+    <p class="desc">
+        <div class="text-content">
+        <div class="buttons" style="padding-bottom:10px;">
+        Want to know more about <b>Udemy?</b> 
+        <form action="/udemy_analytics">
+            <input type="submit"  value="Udemy Analytics"> <br> <br> <br>
+        </form>
+        </div>
+    </div>
+    </p>
+    
+   
     
     <!-- <div class="play-button">
       <span class="play">Play Video</span>
