--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     </nav>
     <div class="text-content">
       <h2>How Effective <br>Are Online Courses?</h2>
-      <p>A deep dive into the analytics of the <b>Coursera & Udemy</b> courses in the education industry. Login via <b>Sawo</b> to view your udemy and coursera analytics now! <i>[Coming Soon]</i> </p>
+      <p>Finding it difficult to choose which platform to invest for your learnings ??  We know you do, so we Goal Diggers tried to analyze two very renowned Edu Platforms <b>Coursera & Udemy</b>. Let's dive deep and find a solution for your problems. Login via <b>Sawo</b> to view your udemy and coursera analytics now! <i>[Coming Soon]</i> </p>
       <div class="buttons">
       <form action="/udemy_analytics">
         <input type="submit" value="Udemy Analytics"> <br>
