--- a/templates/udemy.html
+++ b/templates/udemy.html
@@ -40,21 +40,28 @@
             padding-bottom: 2rem;
         }
         body{
-            height: 230vh;
+            height: 227vh;
         }
+        .text-content .buttons input{
+  outline: none;
+  color: #f2f2f2;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 12px;
+  padding: 6px 15px;
+  border: none;
+  margin: 0 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-image: linear-gradient( 135deg, #942125  10%, #ec3333 100%);
+}
+        
      </style>
    </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo"><a href="/">Goal Diggers</a></div>
-      <!-- <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Latest</a></li>
-        <li><a href="#">Offers</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul> -->
       <div class="buttons">
         <form action="/login_page" method="post">
         <input type="submit" method="LOGIN" value="Login via Sawo">
@@ -87,32 +94,41 @@
         <br>
 
         <h3 class="course" >Four Main Courses: </h3>
-<p class="desc"> 
-1. Business Finance courses - 1195 <br>
-2. Graphic Design courses - 603<br>
-3. MI courses - 680<br>
-4. WD courses - 1200<br>
-</p>
+            <p class="desc"> 
+            1. Business Finance courses - 1195 <br>
+            2. Graphic Design courses - 603<br>
+            3. MI courses - 680<br>
+            4. WD courses - 1200<br>
+            </p>
 <br>
 
         <h3 class="course" >Final Conclusive Facts: </h3>
 <p class="desc">
-• Highest <b>number of subscribers</b> in the subject - <b>Business Finance</b> was found to be <b>65576</b> for the course <b>"Bitcoin or How I Learned to Stop Worrying and Love Crypto" </b><br>
+• Highest <b>number of students</b> enrolled in <b>Business Finance</b> was found to be <b>65576</b> for the course <b>"Bitcoin or How I Learned to Stop Worrying and Love Crypto" </b><br>
 
-• Highest <b>number of subscribers</b> in the subject - <b>Graphic Designer</b> was found to be <b>53851</b>  for the course <b>"Photoshop In-Depth : Master all of Photoshop's Tools Easily" </b><br>
+• Highest <b>number of subscribers</b> enrolled in <b>Graphic Designer</b> was found to be <b>53851</b>  for the course <b>"Photoshop In-Depth : Master all of Photoshop's Tools Easily" </b><br>
 
-• Highest <b>number of subscribers</b> in the subject - <b>Musical Instruments</b>  was found to be <b>101154</b>  for the course <b>"Free Beginner Electric Guitar Lessons"</b> <br>
+• Highest <b>number of subscribers</b> enrolled in  <b>Musical Instruments</b>  was found to be <b>101154</b>  for the course <b>"Free Beginner Electric Guitar Lessons"</b> <br>
 
-• Highest <b>number of subscribers</b> in the subject - <b>Web Development</b> was found to be <b>268923</b>  for the course <b>"Learn HTML5 Programming From Scratch"</b> <br>
+• Highest <b>number of subscribers</b> enrolled in  <b>Web Development</b> was found to be <b>268923</b>  for the course <b>"Learn HTML5 Programming From Scratch"</b> <br>
 </p>
          </p>
          
-
+         <h3 class="course" ><b>Analytics Dashboard</b></h3>
     <div class='tableauPlaceholder' id='viz1630776733385' style='position: relative; display: block;
     margin-left: auto;
     margin-right: auto;'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ud&#47;UdemyMOOCHack-O-Uplift&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='UdemyMOOCHack-O-Uplift&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ud&#47;UdemyMOOCHack-O-Uplift&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1630776733385');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else { vizElement.style.width='100%';vizElement.style.height='3027px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
-    
+<p class="desc">
+    <div class="text-content">
+    <div class="buttons" style="padding-bottom:10px;">
+    Want to know more about <b>Coursera?</b> 
+    <form action="/coursera_analytics">
+        <input type="submit"  value="Coursera Analytics"> <br> <br> <br>
+    </form>
+    </div>
+</div>
+</p>
     
     <!-- <div class="play-button">
       <span class="play">Play Video</span>
