final-final-changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,19 +21,16 @@
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     
+     <style>
+       nav .navbar{
+         height: 8rem;
+       }
+     </style>
    </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo"><a href="/">Goal Diggers</a></div>
-      <!-- <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Latest</a></li>
-        <li><a href="#">Offers</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul> -->
       <div class="buttons">
         <form action="/login_page" method="post">
         <input type="submit" method="LOGIN" value="Login via Sawo">
@@ -42,7 +39,9 @@
     </nav>
     <div class="text-content">
       <h2>How Effective <br>Are Online Courses?</h2>
-      <p>Finding it difficult to choose which platform to invest for your learnings ??  We know you do, so we Goal Diggers tried to analyze two very renowned Edu Platforms <b>Coursera & Udemy</b>. Let's dive deep and find a solution for your problems. Login via <b>Sawo</b> to view your udemy and coursera analytics now! <i>[Coming Soon]</i> </p>
+      <p style="float:left;">Finding it difficult to choose which platform to invest for your learnings ??  We know you do, so we Goal Diggers tried to analyze two very renowned Edu Platforms <b>Coursera & Udemy</b>. Let's dive deep and find a solution for your problems. Login via <b>Sawo</b> to view your udemy and coursera analytics now! <i>[Coming Soon]</i> </p>
+      
+    
       <div class="buttons">
       <form action="/udemy_analytics">
         <input type="submit" value="Udemy Analytics"> <br>
