--- a/templates/udemy.html
+++ b/templates/udemy.html
@@ -24,7 +24,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <style>
         header{
-          height:8rem;
+          height:7rem;
           position: relative;
           margin-top: 5rem;
           margin-bottom: 20%;
@@ -97,8 +97,8 @@
             <p class="desc"> 
             1. Business Finance courses - 1195 <br>
             2. Graphic Design courses - 603<br>
-            3. MI courses - 680<br>
-            4. WD courses - 1200<br>
+            3. Musical Instrument courses - 680<br>
+            4. Web Development courses - 1200<br>
             </p>
 <br>
 
@@ -118,7 +118,7 @@
     <div class='tableauPlaceholder' id='viz1630776733385' style='position: relative; display: block;
     margin-left: auto;
     margin-right: auto;'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ud&#47;UdemyMOOCHack-O-Uplift&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='UdemyMOOCHack-O-Uplift&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ud&#47;UdemyMOOCHack-O-Uplift&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1630776733385');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1169px';vizElement.style.height='854px';} else { vizElement.style.width='100%';vizElement.style.height='3027px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-
+<br>
 <p class="desc">
     <div class="text-content">
     <div class="buttons" style="padding-bottom:10px;">
