--- a/templates/coursera.html
+++ b/templates/coursera.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
@@ -88,7 +87,7 @@
     </div> -->
     
     <br> <br>
-
+    <img src='' alt="Picture Here">
     <h2 class="course"><b>Coursera Analytics</b></h2>
 
     <p class="desc"> 
